hphp/test/quick/param-type.php.expectf
HipHop Fatal error: Argument 1 passed to Bobble::frob() must be an instance of string, int given in %s/test/quick/param-type.php on line 7
